# WorkshopAI-Cognite-V22

./: .env.example  README.md  pyproject.toml
brain_ntnu_workshop_ai_2022/: check_setup.py  utils.py
brain_ntnu_workshop_ai_2022/solution/: cdf_uploader.py  controller.py  getting_started.py  object_detection.py
brain_ntnu_workshop_ai_2022/workshop/: cdf_uploader.py  controller.py  getting_started.py  object_detection.py
data/: README.md
setup/wheels/: Fiona-1.8.21-cp38-cp38-win32.whl
